# dl4nlp

./: .gitignore  .pre-commit-config.yaml  README.md  augment_llm_job.slurm  backtranslate_job.slurm  evaluate.ipynb  llm_augment_job.slurm  pyproject.toml  run-fr.sh  run-uk.sh  train_job.slurm  translate_llm_job.slurm
config/: train_config.yaml
configs/: train_bt-af.yaml  train_bt-ee.yaml  train_bt-fr.yaml  train_bt-uk.yaml  train_bt.yaml  train_bt_ee.yaml  train_config.yaml  train_eval-af.yaml  train_eval-fr.yaml  train_eval-uk.yaml  train_llm-bt-af.yaml  train_llm-bt-ee.yaml  train_llm-bt-fr.yaml  train_llm-bt-uk.yaml  train_llm-bt.yaml  train_llm-lt.yaml  train_llm-tr-af.yaml  train_llm-tr-ee.yaml  train_llm-tr-uk.yaml  train_non_aug-fr.yaml  train_non_aug-uk.yaml  train_non_aug.yaml
configs/llm/: train_llm-fr.yaml
data/samples/: lithuanian_sample.txt
scripts/: augment_data.py  augment_data_backtranslate.py  augment_data_llm.py  convert_to_parquet.py  download_nllb.py  join_llm_augmented_data.py  train.py  translate_data_llm.py
src/augmentors/: backtranslate_augmentor.py  base_augmentor.py  llm_augmentor.py
src/augmentors/llm_api/: base_llm_api.py  gemini_api.py
src/trainer/: __init__.py  trainer.py  utils.py
src/utils/: __init__.py  dataset.py  datasets.py  preprocessors.py  utils.py
