[tool.poetry]
name = "dl4nlp"
version = "0.1.0"
description = "Multilingual Neural Machine Translation for Low-Resource Languages"
authors = ["Dominykas Seputis, Szymon Budziak, Quim Serra Faber, Jozef Ciz"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.44.2"
google-generativeai = "^0.8.1"
datasets = "^3.0.0"
evaluate = "^0.4.3"
torch = "^2.4.1"
accelerate = "^0.34.2"
sacrebleu = "^2.4.3"
pyyaml = "^6.0.2"
wandb = "^0.18.1"
sentencepiece = "^0.2.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
black = "^24.8.0"
mypy = "^1.11.2"
ipython = "^8.27.0"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
types-pyyaml = "^6.0.12.20240917"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
exclude = ['.git', '__pycache__', '.venv']
max_line_length = 99
max_doc_length = 99
max-complexity = 18
pep585-activation = "always"

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = ["conftest.py", ".git", "__pycache__", ".venv"]

[tool.mypy]
files = "src/**/*.py"
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
# Put dependencie's name here if mypy fails to import stubs
module = [
  "scipy.*",
  "google.*",
  "transformers.*",
  "datasets.*",
  "evaluate.*",
  "yaml.*",
]
ignore_missing_imports = true
