[tool.poetry]
name = "dl4nlp"
version = "0.1.0"
description = "Multilingual Neural Machine Translation for Low-Resource Languages"
authors = ["Dominykas Seputis, Szymon Budziak, Quim Serra Faber, Jozef Ciz"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.44.2"
google-generativeai = "^0.8.1"
datasets = "^3.0.0"
evaluate = "^0.4.3"
torch = "^2.4.1"
accelerate = "^0.34.2"
sacrebleu = "^2.4.3"
pyyaml = "^6.0.2"
wandb = "^0.18.1"
bleurt = {git = "https://github.com/google-research/bleurt.git"}
tensorflow = "^2.17.0"
tf-keras = "^2.17.0"
bert-score = "^0.3.13"
unbabel-comet = "^2.2.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
mypy = "^1.11.2"
ipython = "^8.27.0"
pre-commit = "^3.8.0"
types-pyyaml = "^6.0.12.20240917"
ruff = "^0.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = [
    "conftest.py"
]
fix = true

[tool.mypy]
files = "src/**/*.py"
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
# Put dependencie's name here if mypy fails to import stubs
module = [
  "scipy.*",
  "google.*",
  "transformers.*",
  "datasets.*",
  "evaluate.*",
  "yaml.*",
]
ignore_missing_imports = true
